--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139064.md#1" target="_blank">【有冇搞错】网游精神鸦片风波 中共宣传口互搏</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139064.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13141220-bc6427987c27d880afeae24dc58248e8-150x120.jpg" align ="left"></a>新华社下属机构发文批腾讯“精神鸦片”，两小时后就下架，证明遭到内部极大反弹。中共内部的左右互搏已经正式展开。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 9:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140355.md#1" target="_blank">黄翔：宇宙时空岩文（之一）</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140355.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13140545-p2938831a961356672-ss-150x120.jpeg" align ="left"></a>东西两半球人类，各具不同的时空观、不同的精神视角，决定不同视域的深度和广度。对于现当代东方，中国人众生中的生命个体，一代接一代总有那么一类人，其性情的孤绝与精神视域的广漠，总与故土原乡乃至地球上不同地域的“人形生灵”的同类迥然相异。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 4:07 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140293.md#1" target="_blank">千百度：批网游是新毒品，中共铁拳要砸向游戏业？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140293.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13140333-Tencent_Game@1200x1200--150x120.jpeg" align ="left"></a>8月3日，大陆党媒新华社旗下的《经济参考报》刊文评网游行业，称“精神鸦片”竟长成数千亿产业，任何一个产业、一项竞技都不能以毁掉一代人的方式来发展。网络游戏对未成年人的健康成长造成不可低估的影响。数据显示，2020年上半年，腾讯游戏和网易游戏分别占据行业第一和第二。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 2:31 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140220.md#1" target="_blank">袁斌：南京疫情不仅是人祸，更是体制之祸</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13140220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13116551-2b7a60d71ffdfd8b67d5dcc3eda62968-150x120.png" align ="left"></a>新冠变异德尔塔毒株从南京禄口机场破防后，迅速蔓延全国，成为中国继武汉之后最大的疫情。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 2:09 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13138500.md#1" target="_blank">【名家专栏】中共不倒 下次瘟疫只是时间问题</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13138500.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13138512-GettyImages-1234281086-700x420-150x120.jpg" align ="left"></a>据中共的官方喉舌《环球时报》报道，一架从俄罗斯起飞的航班是中国最近爆发疫情的原因。7月20日，南京禄口国际机场的9名员工在清理机舱后，对COVID-19（新冠病毒，中共病毒）的三角洲变种（Delta variant）检测呈阳性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 10:38 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139401.md#1" target="_blank">王友群：中共为什么发动反美宣传战？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139401.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139405-shutterstock_1994080547-600x400-150x120.jpeg" align ="left"></a>8月4日，中共中央机关报《人民日报》发表署名“钟声”的评论文章《美式霸权思维是对世界发展大势的熟视无睹》。
+
+这是7月20日至今《人民日报》以“钟声”名义发表的《政治操弄难掩美抗疫不力事实》系列评论的第16篇。7月20日至今，《人民日报》以一天一篇的频率，连珠炮似地发表抨击美国的文章，这在中美建交42年来极为罕见.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 9:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139276.md#1" target="_blank">王赫：中共当局能“绝对领导”军队吗？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139276.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/05/270a6d5edf4c4b043fd922f2a24f26d5-150x120.jpg" align ="left"></a>中共当局治军，核心两条，一是“党对军队的绝对领导”，一是“强军”。这两条其实正是当局的心头大患，所以嗡嗡嗡的总在耳边叫。例如，7月30日的中共中央政治局第三十二次集体学习，题目就是党对军队绝对领导、奋力实现建军一百年目标。本文略谈“党对军队的绝对领导”问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 8:43 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139166.md#1" target="_blank">沈舟：美军卡尔文森号航母正式部署</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139166.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139170-51356416304_f7cb00a8e5_k-150x120.jpg" align ="left"></a>美军8月3日公布，卡尔文森号航空母舰（CVN 70）打击群开始正式部署，并将参加刚刚开始的“2021年大规模演习”（Large Scale Exercise 2021，LSE2021）。
+
+美军声明表示，此次部署标志着航母打击群首次搭载了先进的F-35C 闪电 II 隐形战机和CMV-22B 鱼鹰直升机。 舰载机第.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 6:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139279.md#1" target="_blank">【纪元专栏】卑诗改名是罔顾历史</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139279.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139300-shutterstock_1839853864-1-150x120.jpg" align ="left"></a>最近，卑诗省（British Columbia）不少有影响力的媒体网站和机构，如The Tyee和The Village of Pemberton等，发起请愿运动，要将卑诗省改名。这些人指责卑诗这个名字，只代表卑诗一小段历史，只纪念英国种族主义殖民者，将哥伦布视为英雄，没有代表原住民和早期定居者多元文化特点，等等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 5:37 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13138981.md#1" target="_blank">颜丹：河南死伤惨重 中共隐瞒真相自欺欺人</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13138981.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139003-94486ed81d414f2c3c41f7a3f71339d1-600x400-150x120.png" align ="left"></a>最近，河南省政府召开新闻发布会，称“截至8月2日12时，此次（河南）特大洪涝灾害已致302人遇难，50人失踪；其中郑州市遇难292人，失踪47人”。然而，面对这一官方统计，老百姓的质疑声此起彼伏。很多人都认为，这样的数字与灾情发生后政府的吊诡行动极为不符。
 ?首先，河南当局采用断网、上门警告民众不要乱说话等龌龊方式来.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 5:29 AM			</td></tr>
@@ -33,16 +45,6 @@
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135462.md#1" target="_blank">【疫情8.3】湖北进入战时状态 武汉全民检测</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135462.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13136682-GettyImages-13321596981-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（8月3日）早上4:20，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.98亿（198,944,127）例，死亡人数超过423万（4,236,600）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 6:16 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135466.md#1" target="_blank">陈思敏：中国7月票房揭示中共百年党庆的惨淡</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135466.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13135606-GettyImages-1231623079@1200x1200-600x400-150x120.jpeg" align ="left"></a>中国7月电影大盘已经收官，单月票房统计也正式出炉。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 5:25 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135372.md#1" target="_blank">石山：郑州雨灾激活的感言</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135372.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13135458-GettyImages-1234101616@1200x1200--150x120.jpeg" align ="left"></a>中国人世世代代受尽奴役，却只想着自己怎样奴役别人，即令阿Q，也想摸尼姑的头、当皇帝，无耻蠢相毕露无疑。阿Q属低端人口，奴役有功便可晋升高端。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 4:28 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134903.md#1" target="_blank">千百度：南京禄口机场官僚主义防疫亲历记</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134903.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13135364-nanjing-airport--150x120.jpeg" align ="left"></a>“根据我的观察，南京禄口机场的这次疫情一定是人祸，是日常防疫工作有重大疏漏造成。江苏多地开始倒查一周或者两周之内经过禄口机场的人员，要求经过的人员去做核算检测排查。南京江宁地区开展了大规模的核酸检测，部分地区升级为中风险地区。这种浪费了大量人力物力的结果本来是可以排除的，但是由于机场的麻痹大意、官僚主义，导致疫情输入.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 3:46 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135199.md#1" target="_blank">王赫：中共强调建军百年目标 释放什么信号？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135199.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13135243-GettyImages-1229217147--150x120.jpeg" align ="left"></a>7月30日，在中共中央政治局第32次集体学习上，最高层强调要确保如期实现建军一百年目标。这事实上是中共穷兵黩武的一个重大信号。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 3:02 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/2/n13134328.md#1" target="_blank">王友群：中共对美“强硬”的背后在担心什么？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/2/n13134328.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13134332-GettyImages-491698695-600x400-1-150x120.jpeg" align ="left"></a>最近的中美天津会谈，中共对全世界头号强国——美国，表现得异常“强硬”。中共副外长谢峰等三个中共战狼外交官连番发力，大有“打倒美帝、停止地球转动”之势。其实，这些“狠话”不过虚张声势罢了。在这种表面强硬的背后，中共担心的一件大事是：以美国为首的国际社会对“中共病毒”的溯源与追责。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 2:54 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135136.md#1" target="_blank">袁斌：中共威胁正常秩序和安全 遭多国围堵</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135136.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12933208-49801956622_3ddfd18bfa_k-150x120.jpg" align ="left"></a>据中共外交部官网消息，新任驻美大使秦刚7月28日抵达美国，与前任崔天凯待遇大相径庭的是，没有美国国务院官员在场迎接他。而同一天，美国行政部门和国会动作频频，狂踩中共红线，发出强烈信号。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 2:34 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/2/n13134135.md#1" target="_blank">周晓辉：北京蛮横要求难如愿 美国推抗共法案</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/2/n13134135.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054380-2-bei-jing-GettyImages-187734702-150x120.jpg" align ="left"></a>不久前，中美外交高层在天津再次举行会谈。除了中共“战狼式”外交让人不齿外，中共向美方提交的两份清单，亦引起了网民们的嘲笑。这两份清单一份是要求美方“纠正”其错误对华政策和言行的清单，一份是中方关切的重点个案清单。
-
-关于这两份清单内容，中共外交部发言人于7月26日的例行记者会上予以介绍。其中“纠错清单”中包括中方敦.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 12:33 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134804.md#1" target="_blank">乾元：郑州洪水过后——国务院调查组又来了</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134804.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13134870-S__5709830--150x120.jpeg" align ="left"></a>面对洪水过去之后的满目疮痍与一地鸡毛，国务院调查组又要出动了。8月2日，所有的党媒几乎在同一时刻发布统一的新闻，首先把调子定在了这次灾害的性质仍旧是“7月17日以来的暴雨灾害”，完全没有提到水库偷偷放水、城市管理缺乏协调、豆腐渣工程等实质问题。在这种完全缺乏科学客观的前提下，调查组的工作是“全面客观地对灾害应对过程进行.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 11:57 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134755.md#1" target="_blank">林忌：由声称自愿 到强迫接种疫苗</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134755.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13134795-GettyImages-1230169035--150x120.jpeg" align ="left"></a>香港特区政府于周一（8月2日）宣布新一轮的防疫措施，进一步收紧对各行各业检疫的要求，例如要求全体公务员、医管局、安老及残疾院舍、中学、小学、幼稚园及特殊学校的员工，都必须接种疫苗，否则之后就要自费定期作病毒检测，把以往“自愿接种”疫苗的政策，变相改为类似强制的措施──无法接种者，不但要不断定期检疫，更荒谬的是要“自费”.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 11:37 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134643.md#1" target="_blank">林保华：千年洪水与百年红党的民族灾难</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134643.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13134744-he2FotoJet--150x120.jpeg" align ="left"></a>今年7月20日河南郑州下暴雨，消息开始传出是地铁站淹死人，尸体躺在地上的照片流出来，当局无法否认；岂料又传出京广路隧道也被淹没，后来拖出两百多辆私家车，当局说只死6个人。最后拖出两部公交车，窗子全用黑布遮住不让人看到里面。依照惯例，用黑布遮住的车窗，里面如果不是不想被人认出的高干，就是不想让人看见的死人。然而死亡数字没.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 11:19 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134601.md#1" target="_blank">火山：吴亦凡案　看党国的“潜规则”与“淫牌”</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13134601.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13134624-GettyImages-632143200--150x120.jpeg" align ="left"></a>加拿大籍华裔艺人吴亦凡被北京公安刑拘了，并且据报料人称，关于他的故事才刚刚开始，瓜很大，比如权色交易、毒品、性侵未成年人，群体淫乱等等，观众们尽可坐吃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月03日 10:31 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13139545.md#1" target="_blank">金言：张果老“人将学鬼”的预言正在上演</a><br></h3>张果老有关当今社会“鬼势滔天，人将学鬼”的预言，出自清末同治七年（1868年）无垢道人所着《八仙得道传》一书。其准确性令人拍案称奇，惊叹无比，且充满警世之意，发人深省。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 9:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jwwcna340/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/news392_5.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jwwcna340/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_5.htm">https://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://github.com/jwwcna340/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
