--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,9 +2,9 @@
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"> 天然免疫力比疫苗更强大？</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159543-shutterstock2_1800070318-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/4/n13138086.md#1" target="_blank"> 打2剂疫苗仍难防感染 有1原因</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/4/n13138086.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139827-shutterstock_1908980830-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/29/n13124918.md#1" target="_blank"> 辉瑞疫苗保护力降至不足50% 原因一篇看懂</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/29/n13124918.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13125092-GettyImages-1233942686-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162292.md#1" target="_blank"> 【直播】新冠病毒和疫苗的刺突蛋白 有害吗？</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162292.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162300-8.14.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank"> 【重播】Delta传多地 中国防疫方式有效吗？</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160544-8.13.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"> 天然免疫力比疫苗更强大？</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159543-shutterstock2_1800070318-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/12/n13157618.md#1" target="_blank"> 【重播】美国逾30%未接种疫苗 3大主要原因</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/12/n13157618.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157704-8.12.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/6/n13071770.md#1" target="_blank">孩子烧烫伤怎么办？医师教你紧急处理方法</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/6/n13071770.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13117777-scald_378405151-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/21/n13105059.md#1" target="_blank">泡1杯香草茶 轻松安度更年期 改善热潮红、失眠</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/7/21/n13105059.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13105279-muxu-tea_1936370323-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/4/7/n12863478.md#1" target="_blank">骑单车会影响前列腺？保养前列腺 少做6件事</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/4/7/n12863478.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12865739-9e60ee09b77668295a112da5895e78e8-320x200.jpeg"></a></td></tr>
@@ -21,6 +21,7 @@
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank">天然免疫力比疫苗更强大？</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank">【重播】Delta传多地 中国防疫方式有效吗？</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160841.md#1" target="_blank">FDA批准新疗法 可预防新冠？两类人适用</a><br></h3>
+<h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13162292.md#1" target="_blank">【直播】新冠病毒和疫苗的刺突蛋白 有害吗？</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/2/n13133358.md#1" target="_blank">咖啡怎么喝更养生？多加入这些食材</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/3/n13135861.md#1" target="_blank">【直播】肥胖水肿 易感染新冠？教你除湿一身轻</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/5/n13142065.md#1" target="_blank">立秋养生哪类食物要少吃？吃对润肺不怕燥</a><br></h3>
